<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_linear_singlecard"
    style="@style/cyberpay_app_new_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/cyberpay_common_app_header" />

    <ScrollView
        android:id="@+id/scroll_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/cyberpay_orderinfo_layout" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cyberpay_bg_orderinfo" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_bankname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/cyberpay_text_black_color"
                    android:textSize="@dimen/cyberpay_main_second_title" />

                <TextView
                    android:id="@+id/id_txt_card_no"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/cyberpay_editext_background"
                    android:drawableLeft="@drawable/cyberpay_card"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textColor="@color/cyberpay_text_black_color"
                    android:textSize="@dimen/cyberpay_main_second_title" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/id_edt_card_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/cyberpay_editext_background"
                        android:drawableLeft="@drawable/cyberpay_mobile"
                        android:hint="@string/cyberpay_card_phone_hint"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="13"
                        android:singleLine="true"
                        android:textColor="@color/cyberpay_text_black_color"
                        android:textSize="@dimen/cyberpay_main_second_title" />

                    <Button
                        android:id="@+id/id_modify_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/cyberpay_btn_gray_big"
                        android:gravity="center"
                        android:text="@string/cyberpay_inputcardinfo_modifyphone"
                        android:textColor="@color/cyberpay_text_blue_color"
                        android:visibility="gone" />
                </LinearLayout>

                <com.citicbank.cbframework.securitykeyboard.impl.CBDefaultSecurityEditText
                    android:id="@+id/id_edt_card_cvn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    inputType="number"
                    android:background="@drawable/cyberpay_editext_background"
                    android:drawableLeft="@drawable/cyberpay_cvn2"
                    android:hint="@string/cyberpay_card_cvn_hint"
                    android:maxLength="3"
                    android:password="false"
                    android:singleLine="true" />

                <com.citicbank.cbframework.securitykeyboard.impl.CBDefaultSecurityEditText
                    android:id="@+id/id_edt_card_validdate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    inputType="number"
                    android:background="@drawable/cyberpay_editext_background"
                    android:drawableLeft="@drawable/cyberpay_validdate"
                    android:hint="@string/cyberpay_card_validdate_hint"
                    android:maxLength="4"
                    android:password="false"
                    android:singleLine="true" />

                <com.citicbank.cyberpay.assist.ui.view.PayCheckVercodeView
                    android:id="@+id/pay_getsms_layout_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <com.citicbank.cbframework.securitykeyboard.impl.CBDefaultSecurityEditText
                    android:id="@+id/id_edt_card_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    inputType="number"
                    android:background="@drawable/cyberpay_editext_background"
                    android:drawableLeft="@drawable/cyberpay_password"
                    android:hint="@string/cyberpay_card_password_hint"
                    android:maxLength="6"
                    android:password="true"
                    android:singleLine="true" />

                <LinearLayout
                    android:id="@+id/linear_addcommcard"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/cyberpay_item_height"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/cyberpay_style_newpay_cardtextstyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cyberpay_card_savecommonbank"
                        android:textSize="@dimen/cyberpay_main_second_title" />

                    <ImageView
                        android:id="@+id/img_addcommcard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/cyberpay_switchon" />
                </LinearLayout>

                <Button
                    android:id="@+id/id_btn_footer_green"
                    style="@style/cyberpay_style_green_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/cyberpay_btn_common_height"
                    android:layout_marginTop="@dimen/cyberpay_button_margintop_height"
                    android:text="@string/cyberpay_okpay" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>